// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircleBadge > respects the inline prop 1`] = `
<div
  class="sc-dAbbOL onCTt"
/>
`;

exports[`CircleBadge > respects the variant prop 1`] = `
<div
  class="sc-dAbbOL gIOBDF"
/>
`;

exports[`CircleBadge > uses the size prop to override the variant prop 1`] = `
<div
  class="sc-dAbbOL EOzpx"
  size="20"
/>
`;
